# hiveformer-corl

./: .gitignore  .gitmodules  10_autolambda_tasks.csv  18_peract_tasks_train_new_success_rates.json  18_peract_tasks_val_new_success_rates.json  18_peract_tasks_val_success_rates.json  74_hiveformer_tasks_train_success_rates.json  74_hiveformer_tasks_val1_success_rates.json  Dockerfile  DockerfileWithoutRLBench  LICENSE  MY_README.md  Makefile  OLD_README.md  README.md  cleanup_datasets.py  data_gen.py  dataset.py  dataset_length.py  debug_success_rates.json  debugging_tasks.csv  episodes.json  eval.json  eval.py  eval_batch.py  hiveformer_new_train_success_rates.json  launch_jobs.sh  location_bounds.json  more_tasks.csv  multi_task_baselines.py  network.py  peract_regen_data_tasks_train_success_rates.json  preprocess_instructions.py  pyproject.toml  records.txt  sftp-config.json  startx.py  structures.py  tasks.csv  train.py  (+21 more)
Mask3D/: fix_dataset.py  main_instance_segmentation.py  simple_entrypoint.py
baseline/: baseline.py  load_mask2former.py  position_prediction.py  utils.py
data_preprocessing/: README.md  compute_gripper_location_bounds.py  compute_workspace_bounds.py  data_gen.py  episodes.json  preprocess_instructions.py  validate_data_generation.py  xian.md
docs/: README.md  jsconfig.json  next.config.js  package-lock.json  package.json
eval/: light_bulb_in.json  put_groceries_in_cupboard.json  put_money_in_safe.json
scripts/: compute_gripper_location_bounds.py  debug_local.sh  evaluate.sh  launch_eval_local.sh  launch_train_slurm.sh  transfer.sh  (+1 more)
(+142 files in other folders)
